<resources>
    <string name="app_name">LinkUp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOG IN</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up_button">SIGN UP</string>
    <string name="sign_in_button">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="linkup">LinkUp</string>
    <string name="name">Name</string>
    <string name="status">Status</string>
    <string name="dyl">Do you really want to logout?</string>
    <string name="done">Done</string>
    <string name="dy">Do you really wish to logout?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="type_the_messages">Message...</string>
    <string name="saksham">saksham</string>
    <string name="name2">Name</string>
    <string name="status2">Status</string>
    <string name="save">Save</string>
</resources>