<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#10001a"
    tools:context=".sign_up">

    <TextView
        android:id="@+id/textView"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_45sdp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/sign_up"
        android:textColor="#e0aaff"
        android:textSize="@dimen/_30sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.126" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@drawable/add_picture"
        app:civ_border_color="#10002b"
        app:civ_border_width="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.885"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.102" />

    <EditText
        android:id="@+id/rgPassword"
        android:layout_width="@dimen/_260sdp"
        android:layout_height="@dimen/_45sdp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="#e0aaff"
        android:textSize="@dimen/_13sdp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.535" />

    <EditText
        android:id="@+id/rgConfirmPassword"
        android:layout_width="@dimen/_260sdp"
        android:layout_height="@dimen/_45sdp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColorHint="#e0aaff"
        android:textSize="@dimen/_13sdp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.672" />

    <EditText
        android:id="@+id/rgEmail"
        android:layout_width="@dimen/_260sdp"
        android:layout_height="@dimen/_45sdp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center_vertical"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="#e0aaff"
        android:textSize="@dimen/_13sdp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.404" />


    <Button
        android:id="@+id/signUpButton"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_45sdp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/sign_up_button"
        android:textColor="@color/white"
        android:textSize="@dimen/_17sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.816" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_20sdp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/already_have_an_account"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.361"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.883" />

    <TextView
        android:id="@+id/signInButton"
        android:layout_width="@dimen/_45sdp"
        android:layout_height="@dimen/_20sdp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/sign_in_button"
        android:textColor="#e0aaff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.778"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.883" />

    <EditText
        android:id="@+id/rgLastName"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_45sdp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/last_name"
        android:inputType="text"
        android:textColorHint="#e0aaff"
        android:textSize="@dimen/_13sdp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.854"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.27" />

    <EditText
        android:id="@+id/rgFirstName"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_45sdp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/first_name"
        android:inputType="text"
        android:textColorHint="#e0aaff"
        android:textSize="@dimen/_13sdp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.27" />

</androidx.constraintlayout.widget.ConstraintLayout>