<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#10001a"
    tools:context=".login">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.122"
        app:srcCompat="@drawable/linkup_logo" />

    <EditText
        android:id="@+id/editTextLogEmail"
        android:layout_width="@dimen/_260sdp"
        android:layout_height="@dimen/_45sdp"
        android:ems="10"
        android:background="@drawable/rounded_edittext"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/email"
        android:gravity="center_vertical"
        android:inputType="textEmailAddress"
        android:textColorHint="#e0aaff"
        android:textSize="@dimen/_13sdp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.535" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="@dimen/_260sdp"
        android:layout_height="@dimen/_45sdp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/log_in"
        android:textColor="#e0aaff"
        android:textSize="@dimen/_30sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.406" />

    <EditText
        android:id="@+id/editTextLogPassword"
        android:layout_width="@dimen/_260sdp"
        android:layout_height="@dimen/_45sdp"
        android:ems="10"
        android:background="@drawable/rounded_edittext"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="#e0aaff"
        android:textSize="@dimen/_13sdp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.659" />

    <Button
        android:id="@+id/loginbutton"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_45sdp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/login"
        android:textSize="@dimen/_17sdp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.815" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="@dimen/_135sdp"
        android:layout_height="@dimen/_20sdp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.391"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.883" />

    <TextView
        android:id="@+id/signUp"
        android:layout_width="@dimen/_45sdp"
        android:layout_height="@dimen/_20sdp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/sign_up"
        android:textColor="#e0aaff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.761"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.883" />

</androidx.constraintlayout.widget.ConstraintLayout>