<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#10002b"
    tools:context=".Settings">

<!--    <ImageView-->
<!--        android:id="@+id/settingprofile"-->
<!--        android:layout_width="170dp"-->
<!--        android:layout_height="170dp"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/settingname"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.649"-->
<!--        android:src="@drawable/cat_profile" />-->
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settingprofile"
        android:layout_width="170dp"
        android:layout_height="170dp"
        app:layout_constraintBottom_toTopOf="@+id/settingname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.649"
        android:src="@drawable/cat_profile"
        app:civ_border_color="#10002b"
        app:civ_border_width="1dp"/>

    <EditText
        android:id="@+id/settingname"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="216dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:background="@drawable/rounded_edittext"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/first_name"
        android:textColor="#c77dff"
        android:textColorHint="#c77dff"
        app:layout_constraintBottom_toTopOf="@+id/settinglname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.814"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/settinglname"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="216dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/last_name"
        android:background="@drawable/rounded_edittext"
        android:fontFamily="@font/poppins_regular"
        android:textColor="#c77dff"
        android:textColorHint="#c77dff"
        app:layout_constraintBottom_toTopOf="@+id/settingstatus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.881"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/settingstatus"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_35sdp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/status2"
        android:background="@drawable/rounded_edittext"
        android:fontFamily="@font/poppins_regular"
        android:textColor="#c77dff"
        android:textColorHint="#c77dff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.712"
        android:padding="10dp"/>

    <Button
        android:id="@+id/donebut"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_35sdp"
        android:text="@string/save"
        android:fontFamily="@font/poppins_bold"
        android:textSize="@dimen/_13sdp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.846" />

</androidx.constraintlayout.widget.ConstraintLayout>